correcting layout issues and destroy functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,8 +38,8 @@ hr.login-hr{
 .field_with_errors input{
 	border-color: red;
 }
-.message .message-header p{
-	text-align: center;
+.message .message-header{
+	border-radius: 0;
 }
 .is-error .message-header{
 	background-color: #b30404;
